# ios-minicap

./: .gitignore  CMakeLists.txt  ISSUE_TEMPLATE.md  LICENSE  README.md  dependencies.txt  open_xcode.sh  run.sh
example/: README.md  app.js  package.json
example/public/: index.html
src/: Banner.cpp  Banner.hpp  Frame.hpp  FrameListener.cpp  FrameListener.hpp  JpegEncoder.cpp  JpegEncoder.hpp  PngDecoder.cpp  PngDecoder.hpp  Projection.hpp  ScreenshotClient.cpp  ScreenshotClient.hpp  SimpleServer.cpp  SimpleServer.hpp  StreamClient.h  StreamClient.mm  TiffDecoder.cpp  TiffDecoder.hpp  minicap.cpp  minicap.hpp
